# PolyglotXBot

./: .gitignore  Dockerfile  README.md  bot.py  main.py  pyproject.toml  requirements.txt  sqlite.py
.github/workflows/: main.yml
misc/: util.py
polyglotxbot/: bot.py  main.py  message_texts.py
polyglotxbot/misc/: util.py
