[tool.poetry]
name = "polyglotxbot"
version = "0.1.0"
description = ""
authors = ["Kirill <kl.bazarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
aiogram = "^2.24"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
